--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
 </head>
 
 <body>
-    
+    <div class="container">
+
+        <header>
+            <!-- titolo -->
+            <h1 class="titolo">Meet Our Team</h1>
+            <!-- descrizione -->
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam eum tempore esse est id. Officia sequi mollitia omnis blanditiis dolor? Repellendus voluptates recusandae autem modi veniam necessitatibus culpa mollitia saepe?
+            </p>
+        </header>
+
+        <!-- presentazioni -->
+        <main>
+            <div class="profilo">
+                <img src="img/male1.png" alt="male1">
+                <span>
+                    <!-- nome -->
+                    <h3>MARCO BIANCHI</h3>
+                    qualifica
+                    <div>Designer</div>
+                    <a class="email" href="marcobianchi@team.com">marcobianchi@team.com</a>
+                </span>
+            </div>
+        </main>
+
+    </div>
 </body>
 </html>
