--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         <main>
             <div class="profilo">
                 <img src="img/male1.png" alt="male1">
-                <span>
+                <span class="info">
                     <!-- nome -->
-                    <h3>MARCO BIANCHI</h3>
-                    qualifica
-                    <div>Designer</div>
+                    <h3 class="nome">MARCO BIANCHI</h3>
+                    <!-- qualifica -->
+                    <div class="qualifica">Designer</div>
+                    <!-- email -->
                     <a class="email" href="marcobianchi@team.com">marcobianchi@team.com</a>
                 </span>
             </div>
