--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <!-- presentazioni -->
         <main>
             <div class="profilo">
-                <img src="img/male1.png" alt="male1">
+                <img class="thumbn" src="img/male1.png" alt="male1">
                 <span class="info">
                     <!-- nome -->
                     <h3 class="nome">MARCO BIANCHI</h3>
                     <!-- qualifica -->
                     <div class="qualifica">Designer</div>
                     <!-- email -->
-                    <a class="email" href="marcobianchi@team.com">marcobianchi@team.com</a>
+                    <div class="email" href="marcobianchi@team.com">marcobianchi@team.com</div>
                 </span>
             </div>
         </main>
