--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <main>
             <div class="profilo">
                 <img class="thumbn" src="img/male1.png" alt="male1">
-                <span class="info">
+                <div class="info">
                     <!-- nome -->
                     <h3 class="nome">MARCO BIANCHI</h3>
                     <!-- qualifica -->
                     <div class="qualifica">Designer</div>
                     <!-- email -->
                     <div class="email" href="marcobianchi@team.com">marcobianchi@team.com</div>
-                </span>
+                </div>
             </div>
         </main>
 
